--- a/dotnet/Calendar.Client/Views/MainWindow.xaml
+++ b/dotnet/Calendar.Client/Views/MainWindow.xaml
@@ -5,8 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calendar.Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="720" Width="1280">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="220"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Grid.ColumnSpan="2">
+            
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="0">
+            
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="2">
+            
+        </Grid>
+
+        <Grid Grid.Row="3" Grid.Column="0">
+            
+        </Grid>
+
+        <Grid Grid.Row="3" Grid.Column="1">
+            
+        </Grid>
     </Grid>
 </Window>
