--- a/dotnet/Calendar.Client/Views/MainWindow.xaml
+++ b/dotnet/Calendar.Client/Views/MainWindow.xaml
@@ -4,38 +4,60 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calendar.Client"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
-
         <Grid.RowDefinitions>
             <RowDefinition Height="75"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="220"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+
         <Grid Grid.Row="0" Grid.ColumnSpan="2">
-            
+            <materialDesign:ColorZone Mode="Dark"  Padding="12" 
+                                      Height="75"
+                                      materialDesign:ShadowAssist.ShadowDepth="Depth3">
+                <DockPanel>
+                    <materialDesign:PopupBox DockPanel.Dock="Right" PlacementMode="BottomAndAlignRightEdges" StaysOpen="False">
+                        <StackPanel>
+                            <Button Content="Настройки"/>
+                            <Button Content="О программе"/>
+                            <Separator/>
+                            <Button Content="Выход"/>
+                        </StackPanel>
+                    </materialDesign:PopupBox>
+
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Calendar.Client;component/Resources/logo.png" Stretch="Fill"/>
+                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                   FontSize="24" Text="Календарь отпусков" 
+                                   FontFamily="Tahoma" TextAlignment="Center"/>
+                    </StackPanel>
+                </DockPanel>
+            </materialDesign:ColorZone>
         </Grid>
 
+        <!-- Список пользователей -->
         <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="0">
-            
+
         </Grid>
 
         <Grid Grid.Row="1" Grid.Column="2">
-            
+
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="0">
-            
+
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="1">
-            
+
         </Grid>
     </Grid>
 </Window>
