--- a/dotnet/Calendar.Client/Views/MainWindow.xaml
+++ b/dotnet/Calendar.Client/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Calendar.Client"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280">
+        Title="Календарь отпусков" Height="720" Width="1280">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="75"/>
@@ -24,32 +24,48 @@
                                       Height="75"
                                       materialDesign:ShadowAssist.ShadowDepth="Depth3">
                 <DockPanel>
-                    <materialDesign:PopupBox DockPanel.Dock="Right" PlacementMode="BottomAndAlignRightEdges" StaysOpen="False">
+                    <materialDesign:PopupBox DockPanel.Dock="Right" 
+                                             PlacementMode="BottomAndAlignRightEdges" StaysOpen="False">
                         <StackPanel>
                             <Button Content="Настройки"/>
                             <Button Content="О программе"/>
                             <Separator/>
-                            <Button Content="Выход"/>
+                            <Button Content="Test"
+                                    Command="{Binding TestCommand}"/>
+                            <Button Content="Выход"
+                                    Command="{Binding ShutdownCommand}"/>
                         </StackPanel>
                     </materialDesign:PopupBox>
 
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="/Calendar.Client;component/Resources/logo.png" Stretch="Fill"/>
-                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" 
-                                   FontSize="24" Text="Календарь отпусков" 
-                                   FontFamily="Tahoma" TextAlignment="Center"/>
-                    </StackPanel>
+                    <Image DockPanel.Dock="Left" 
+                           Source="/Calendar.Client;component/Resources/logo.png" Stretch="Uniform"/>
+
+                    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" 
+                               FontSize="24" Text="Календарь отпусков" 
+                               FontFamily="Tahoma" TextAlignment="Center"/>
+
                 </DockPanel>
             </materialDesign:ColorZone>
         </Grid>
 
         <!-- Список пользователей -->
-        <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="0">
+        <Grid Grid.Row="1" Grid.RowSpan="1" Grid.Column="0">
+            <StackPanel>
+                <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" 
+                           HorizontalAlignment="Center" Text="Пользователи"/>
 
+                <ListBox IsEnabled="{Binding IsChecked, ElementName=EnableListBox}" 
+                         ItemsSource="{Binding Staff, UpdateSourceTrigger=PropertyChanged}"
+                         DisplayMemberPath="Name" SelectedItem="{Binding SelectedUser}">
+                    <!--<TextBlock Text="Энтони Эдвард Старк"/>
+                    <TextBlock Text="Питер Паркер"/>
+                    <TextBlock Text="Джеймс Хоулетт"/>-->
+                </ListBox>
+            </StackPanel>
         </Grid>
 
         <Grid Grid.Row="1" Grid.Column="2">
-
+            
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="0">
