--- a/dotnet/Calendar.Client/Views/MainWindow.xaml
+++ b/dotnet/Calendar.Client/Views/MainWindow.xaml
@@ -15,8 +15,8 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="20*"/>
+            <ColumnDefinition Width="100*"/>
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Row="0" Grid.ColumnSpan="2">
@@ -49,23 +49,36 @@
         </Grid>
 
         <!-- Список пользователей -->
-        <Grid Grid.Row="1" Grid.RowSpan="1" Grid.Column="0">
-            <StackPanel>
-                <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" 
-                           HorizontalAlignment="Center" Text="Пользователи"/>
+        <Grid Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Margin="15 0 0 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
 
+            <Grid Grid.Row="0">
+                <TextBlock Style="{StaticResource MaterialDesignTitleTextBlock}" 
+                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                           Text="Пользователи"/>
+            </Grid>
+
+            <Grid Grid.Row="1">
                 <ListBox IsEnabled="{Binding IsChecked, ElementName=EnableListBox}" 
                          ItemsSource="{Binding Staff, UpdateSourceTrigger=PropertyChanged}"
                          DisplayMemberPath="Name" SelectedItem="{Binding SelectedUser}">
-                    <!--<TextBlock Text="Энтони Эдвард Старк"/>
-                    <TextBlock Text="Питер Паркер"/>
-                    <TextBlock Text="Джеймс Хоулетт"/>-->
                 </ListBox>
-            </StackPanel>
+            </Grid>
         </Grid>
 
-        <Grid Grid.Row="1" Grid.Column="2">
-            
+        <Grid Grid.Row="1" Grid.Column="2" Margin="15 0">
+            <ListView ItemsSource="{Binding UserVacations, UpdateSourceTrigger=PropertyChanged}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn DisplayMemberBinding="{Binding CountDays}" Header="Кол-во дней" />
+                        <GridViewColumn DisplayMemberBinding="{Binding StartDate, StringFormat={}{0:d}}" Header="Дата начала" />
+                        <GridViewColumn DisplayMemberBinding="{Binding EndDate, StringFormat={}{0:d}}" Header="Дата окончания" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="0">
